fix auth, working version
